# ipcom-marketing-ai

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE_HEADER.txt  README.md  demo_bilingual_persona.py  demo_persona_generator.py  demo_standalone.py  integration-test-results.xml  mkdocs.yml  pyproject.toml  requirements.txt  setup-mcp.py  test-results.xml  test_marketing.py  test_persona_generator.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docs/: API_REFERENCE.md  CHANGELOG_v0.3.0.md  DEVELOPER_GUIDE.md  NPM_PUBLICATION_GUIDE.md  PERSONA_GENERATOR_PLAN.md  TECHNICAL_DOCUMENTATION.md  planner.md
npm-wrapper/: LICENSE  README.md  index.js  ipcom-marketing-ai-0.3.0.tgz  package.json  postinstall.js  publish.sh  test-local.sh
src/osp_marketing_tools/: __init__.py  analysis.py  batch.py  cache.py  codes-llm.md  config.py  fallback_data_provider.py  frameworks-marketing-2025.md  guide-llm.md  i18n_questions.py  interview_engine.py  market_research_engine.py  meta-llm.md  natural_language.py  on-page-seo-guide.md  persona_builder.py  persona_data_structures.py  quality_assurance.py  seo-frameworks-2025.md  server.py  server.py.backup  technical-writing-2025.md  version.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_analysis_integration.py  test_basic_integration.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_analysis.py  test_batch.py  test_cache.py  test_config.py  test_mcp_functions.py  test_server.py  test_server_basic.py
