[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osp-marketing-tools"
version = "0.2.2"
description = "OSP Marketing Tools using Model Context Protocol - Enhanced with 2025 Frameworks"
authors = [
    {name = "Robert Douglass, Tracy Evans, Jeffrey McGuire, other Open Strategy Partners contributors"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp[cli]>=1.2.0"
]

[project.scripts]
osp_marketing_tools = "osp_marketing_tools.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/osp_marketing_tools"]