[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osp-marketing-tools"
version = "0.3.0"
description = "OSP Marketing Tools using Model Context Protocol - Enhanced with 2025 Frameworks"
authors = [
    {name = "Robert Douglass, Tracy Evans, Jeffrey McGuire, other Open Strategy Partners contributors"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp[cli]>=1.2.0",
    "tomli>=1.2.0;python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "psutil>=5.9.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0"
]

[project.scripts]
osp_marketing_tools = "osp_marketing_tools.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/osp_marketing_tools"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/osp_marketing_tools",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "performance: Performance benchmark tests",
    "benchmark: Benchmark tests for measuring performance",
    "asyncio: Async tests"
]
asyncio_mode = "auto"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src/osp_marketing_tools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert statements and shell usage in safe contexts
