[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osp-marketing-tools"
version = "0.3.0"
description = "OSP Marketing Tools using Model Context Protocol - Enhanced with 2025 Frameworks"
authors = [
    {name = "Robert Douglass, Tracy Evans, Jeffrey McGuire, other Open Strategy Partners contributors"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp[cli]>=1.2.0",
    "tomli>=1.2.0;python_version<'3.11'",
    "ddgs>=4.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "psutil>=5.9.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0"
]
search = [
    "googlesearch-python>=1.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0"
]

[project.scripts]
osp_marketing_tools = "osp_marketing_tools.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/osp_marketing_tools"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "performance: Performance benchmark tests",
    "benchmark: Benchmark tests for measuring performance",
    "asyncio: Async tests"
]
asyncio_mode = "auto"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src/osp_marketing_tools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# isort configuration (Black compatible)
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert statements and shell usage in safe contexts
